<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/text_header"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUsd"
        style="@style/AppTheme.TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_usd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader" />

    <EditText
        android:id="@+id/etUsd"
        style="@style/AppTheme.EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/usa"
        android:hint="@string/hint_usd"
        android:scaleWidth="20%"
        android:scaleHeight="20%"
        app:layout_constraintTop_toBottomOf="@id/tvUsd" />

    <TextView
        android:id="@+id/tvBob"
        style="@style/AppTheme.TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_bob"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsd" />

    <EditText
        android:id="@+id/etBob"
        style="@style/AppTheme.EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/bolivia"
        android:hint="@string/hint_bob"
        app:layout_constraintTop_toBottomOf="@id/tvBob" />

    <Button
        android:id="@+id/buttonConvert"
        style="@style/AppTheme.ButtonStyle"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:onClick="convertirDivisa"
        android:text="@string/button_convert"
        app:layout_constraintEnd_toStartOf="@id/buttonClear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etBob" />
    <Button
        android:id="@+id/buttonClear"
        style="@style/AppTheme.ButtonStyle"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:onClick="clear"
        android:text="@string/button_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonConvert"
        app:layout_constraintTop_toBottomOf="@id/etBob" />


</androidx.constraintlayout.widget.ConstraintLayout>